--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="ViewModels\Pages\" />
+    <Folder Include="Views\Elements\" />
   </ItemGroup>
 
 </Project>
